--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Search Form start -->
     <div class="search-form">
-      <input type="search" id="search-box" placeholder="Cari di KyvnStore">
+      <input type="search" id="search-box" placeholder="Cari di KyvnShop">
       <label for="search-box"><i data-feather="search"></i></label>
     </div>
     <!-- Search Form end -->
@@ -205,32 +205,6 @@
     </div>
   </footer>
   <!-- Footer end -->
-
-  <!-- Modal Box Item Detail start -->
-  <div class="modal" id="item-detail-modal">
-    <div class="modal-container">
-      <a href="#" class="close-icon"><i data-feather="x"></i></a>
-      <div class="modal-content">
-        <img src="imgbr/Baju_6.jpg" alt="Product 1">
-        <div class="product-content">
-          <h3>Product 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, tenetur cupiditate facilis obcaecati
-            ullam maiores minima quos perspiciatis similique itaque, esse rerum eius repellendus voluptatibus!</p>
-          <div class="product-stars">
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star"></i>
-          </div>
-          <div class="product-price">IDR 35.500</div>
-          <a href="#"><i data-feather="shopping-cart"></i> <span>add to cart</span></a>
-        </div>
-      </div>
-      </div>
-    </div>
-  </div>
-  <!-- Modal Box Item Detail end -->
 
   <!-- Feather Icons -->
   <script>
